--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   lets get started!
 </h1>
 <a class="text-gray-900 underline w-4 mx-auto text-sm mt-10" routerLink="list-announce">list-announce</a>
+<a class="text-gray-900 underline w-4 mx-auto text-sm mt-10" routerLink="add-announce">add-announce</a>
+
 <router-outlet></router-outlet>
 
 
